--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -189,11 +189,13 @@ Pour les veinules, nous n’avons pas l’information de densité. Le volume est
 avec $V_a$ et $V_c$ les solutions de~\ref{eq:volumesac}, et les volumes de référence toujours donnés par la littérature.\\
 De même la longueur totale entre artères et veines est subdivisée en trois longueurs (artérioles, capillaires, veinules) sur la base des proportions fournit par la littérature (\cite{Zagzoule1986}). En l’état, faute d’informations structurales complémentaires, nous n’utilisons pas de facteurs géométriques correctifs supplémentaires (de type dimensions fractales), pour tenir compte du caractère ramifié de cette partie de la structure. \\
 A partir des volumes et des longueurs de chaque compartiment, les rayons sont déterminés simplement (Équation~\ref{eq:rayons}). \\
-Les rayons moyens des différents compartiments peuvent être visualisés (Figure~\ref{fig:2_13_profil_rayons}) et leur différences relatives mis en comparaisons aux données de la littérature (par exemple dans le chapitre suivanrt figure~\ref{fig:4_3_zagzoule}). Par ailleurs, les données quantitative illustrées dans le Tableau~\ref{table:tab_profil_rayons} montrent des longueurs du même ordre de grandeur (bien que souvent plus élevés dans le modèle de Zagzoule et al.). On voit ainsi que des artères aux veines, les proportions des caractéristiques des différents tubes sont comparables. En revanche l'écart est important en terme de nombres d'artères et de veines est important, ce qui s'explique par d'une part : le niveau de détails de notre segmentation et d'autres part le fait les données de Zagzoule et al. ne sont pas issues directement de données terrain, mais des estimations.\\
+Les rayons moyens des différents compartiments peuvent être visualisés (Figure~\ref{fig:2_13_profil_rayons}) et leur différences relatives mis en comparaisons aux données de la littérature (par exemple dans le chapitre suivant figure~\ref{fig:4_3_zagzoule}). Par ailleurs, les données quantitative illustrées dans le Tableau~\ref{table:tab_profil_rayons} montrent des longueurs du même ordre de grandeur (bien que souvent plus élevés dans le modèle de Zagzoule et al.). On voit ainsi que des artères aux veines, les proportions des caractéristiques des différents tubes sont comparables. En revanche l'écart est important en terme de nombres d'artères et de veines est important, ce qui s'explique par d'une part : le niveau de détails de notre segmentation et d'autres part le fait les données de Zagzoule et al. ne sont pas issues directement de données terrain, mais des estimations.\\
 BraVa, pour {\em The Brain Vasculature}, fournit une base donnée de l'architecture artérielle dans le cerveau (\cite{Wright2013}). Pour construire cette base, 61 patients (âge 31.16 \textcolor{red}{+/-}10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm\^3) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho (\cite{neuronmorpho}). Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. La comparaison de nos mesures aux données de BraVa permet d'évaluer l'écart de notre modèle à des données similaires. Le résultat met en évidence un nombre inférieur de moitié en terme de branches de notre méthode en rapport de BraVa. Au vue de l'approche manuelle privilégié par ce dernier ce résultat est cohérent. La longueur moyenne des segments en revanche est cohérente, bien que des écarts peuvent exister du fait de l'écart précédement décrit. On notera par ailleurs que les longueurs sont plus faibles que celles initialement utilisées par Zagzoule et al.. Les informations sur les calibres des vaisseaux ne sont cependant pas disponibles. \\
 
 %%%
-
+\begin{table}
+\caption{Caractéristiques de l'architecture selon différents modèles. Les aires doivent certainement être multipliées par le nombre de vaisseaux pour correspondre aux données de zagzoule. Le nombre d'artérioles, capillaires et veinules de notre modèle regroupe un ensemble de vaisseaux d'un territoire.}
+\label{tab:tab_profil_rayons}
 \begin{tabular}[!t]{llll}
 \centering
       & Zagzoule & BraVa & Notre modèle  \\
@@ -212,10 +214,9 @@ BraVa, pour {\em The Brain Vasculature}, fournit une base donnée de l'architect
    Veines : aire (mm²) & 5.34 (cm²)  (8.76 \%)& NA & 21.6  (3.12 \%)\\
    Veines : longueur (mm) & 78.5 & NA & 26.5 \\
    Veines : nombre & 3896 & NA & 24 \\
-\label{table:tab_profil_rayons}	
-%\caption{Caractéristiques de l'architecture selon différents modèles. Les aires doivent certainement être multipliées par le nombre de vaisseaux pour correspondre aux données de zagzoule. Le nombre d'artérioles, capillaires et veinules de notre modèle regroupe un ensemble de vaisseaux d'un territoire.}
-\end{tabular}
 
+\end{tabular}
+\end{table}
 %%%
 %%%
 \begin{figure}[!t]
@@ -230,7 +231,7 @@ BraVa, pour {\em The Brain Vasculature}, fournit une base donnée de l'architect
 %%%
 \section{Le système ventriculaire}
 \label{sec:syst_ventr}
-A ce stade, nous possédons une architecture complète allant des entrées artérielles aux veines. Il manque cependant les informations relatives à la circulation du liquide cérébro-spinal. Ce dernier peut être segmenté facilement via l’outil SPM (voir Appendice 1.2.4)\textcolor{red}{revoir cette ref}. Cependant, cet outil ne fournit aucun moyen d’identification directe des différents ventricules. Une toolbox SPM nommée ALVIN pour « Automatic Lateral Ventricle delIneatioN » propose d’identifier sur la base d’une imagerie T1, et de sa segmentation de données a-priori, les ventricules latéraux (\cite{Kempton2011}). Cependant afin de reproduire un système cohérent, nous souhaitons intégrer les ventricules latéraux, mais aussi les troisième et quatrième ventricules à notre description. Des outils plus ou moins sophistiqués existent par utilisation de modèles du système ventriculaires et d’algorithmes de croissance de région [47][48] (\cite{Liu2009},\cite{Schnack2001}) mais peu sont disponibles gratuitement pour la communauté. Or les ventricules peuvent être facilement segmentés manuellement en 4 clics via des outils de traçage semi-automatique de roi 3D basés sur les intensités. Un exemple est le « 3D painting tool » proposé par MRIcron (\cite{Rorden2007}). En effet, les ventricules apparaissent en hyposignaux clairement délimitable des autres tissus. MRIcron permet de sélectionner automatiquement tous les voxels dans un rayon donné ayant un faible écart en termes d’intensité à un voxel de référence. Des cycles successifs d’érosions/dilatations limite les risques que la ROI « bave » dans des régions non désirées. Cette méthodologie est simple à mettre en place, et efficace (figure ~\ref{fig:2_14_ventricules_segmentes}). \\
+A ce stade, nous possédons une architecture complète allant des entrées artérielles aux veines. Il manque cependant les informations relatives à la circulation du liquide cérébro-spinal. Ce dernier peut être segmenté facilement via l’outil SPM (voir Appendice~\ref{sec:pretrait}). Cependant, cet outil ne fournit aucun moyen d’identification directe des différents ventricules. Une toolbox SPM nommée ALVIN pour « Automatic Lateral Ventricle delIneatioN » propose d’identifier sur la base d’une imagerie T1, et de sa segmentation de données a-priori, les ventricules latéraux (\cite{Kempton2011}). Cependant afin de reproduire un système cohérent, nous souhaitons intégrer les ventricules latéraux, mais aussi les troisième et quatrième ventricules à notre description. Des outils plus ou moins sophistiqués existent par utilisation de modèles du système ventriculaires et d’algorithmes de croissance de région  (\cite{Liu2009},\cite{Schnack2001}) mais peu sont disponibles gratuitement pour la communauté. Or les ventricules peuvent être facilement segmentés manuellement en 4 clics via des outils de traçage semi-automatique de roi 3D basés sur les intensités. Un exemple est le « 3D painting tool » proposé par MRIcron (\cite{Rorden2007}). En effet, les ventricules apparaissent en hyposignaux clairement délimitable des autres tissus. MRIcron permet de sélectionner automatiquement tous les voxels dans un rayon donné ayant un faible écart en termes d’intensité à un voxel de référence. Des cycles successifs d’érosions/dilatations limite les risques que la ROI « bave » dans des régions non désirées. Cette méthodologie est simple à mettre en place, et efficace (figure ~\ref{fig:2_14_ventricules_segmentes}). \\
 %%%
 \begin{figure}[!t]
 \centering
