--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -128,11 +128,11 @@ Les propriétés biophysiques respectives du système artériel et du système v
 \begin{figure}[!t]
 \centering
 \includegraphics[width=11cm]{1_7_contrast_angiography}
-\caption{Illustration d'angiographie IRM par injection de produit de contraste.Séquence SPARSE acquise sur une IRM 3T avec une antenne 20 canaux, TE/TR=1.37/3.28 ms, matrice = 384, détection du contraste : carbolus axial, débit = 2cc/s (12cc), agent de contraste : Dotarem, taille du voxel = 0.7 x 0.7 x 0.7 mm. L'image est une projection des intensités maximales selon le plan sagittal. }
+\caption{Illustration d'angiographie IRM par injection de produit de contraste.Séquence SPARSE acquise sur une IRM 3T avec une antenne 20 canaux, $T_E$/$T_R$=1.37/3.28 ms, matrice = 384, détection du contraste : carbolus axial, débit = 2cc/s (12cc), agent de contraste : Dotarem, taille du voxel = 0.7 x 0.7 x 0.7 mm. L'image est une projection des intensités maximales selon le plan sagittal. }
 \label{fig:1_7_contrast_angiography}	
 \end{figure}
 %%%
-L’injection d’un produit de contraste permet, comme son nom l’indique, d’améliorer le contraste entre les tissus. Il a pour but d’augmenter le signal d’un type de structure en particulier. Le principe repose sur l’utilisation de substances paramagnétique ou super paramagnétique qui vont réduire le temps de relaxation longitudinal (T1) et transversal (effet T2*) des tissus avoisinant, permettant ainsi la création d’un signal plus important en T1. L’environnement interne du cerveau étant très stable, ceci est autorisé par la présence d’une barrière appelée barrière hémato encéphalique limitant le passage de certaines molécules du compartiment sanguin au liquide cérébrospinal et au liquide extracellulaire du parenchyme cérébral. La présence de cette barrière va ainsi limiter le produit de contraste au compartiment vasculaire après injection intravasculaire, ce qui permet d’apprécier l’architecture vasculaire\footnote{Notons tout de même que la diffusion du produit de contraste à l’extérieur du compartiment vasculaire reste néanmoins possible (et souvent utilisée comme critère diagnostique) dans le cadre de pathologies (gliomes) modifiant la barrière hémato-encéphalique.}.\\
+L’injection d’un produit de contraste permet, comme son nom l’indique, d’améliorer le contraste entre les tissus. Il a pour but d’augmenter le signal d’un type de structure en particulier. Le principe repose sur l’utilisation de substances paramagnétique ou super paramagnétique qui vont réduire le temps de relaxation longitudinal (T1) et transversal (effet $T_2$*) des tissus avoisinant, permettant ainsi la création d’un signal plus important en $T_1$. L’environnement interne du cerveau étant très stable, ceci est autorisé par la présence d’une barrière appelée barrière hémato encéphalique limitant le passage de certaines molécules du compartiment sanguin au liquide cérébrospinal et au liquide extracellulaire du parenchyme cérébral. La présence de cette barrière va ainsi limiter le produit de contraste au compartiment vasculaire après injection intravasculaire, ce qui permet d’apprécier l’architecture vasculaire\footnote{Notons tout de même que la diffusion du produit de contraste à l’extérieur du compartiment vasculaire reste néanmoins possible (et souvent utilisée comme critère diagnostique) dans le cadre de pathologies (gliomes) modifiant la barrière hémato-encéphalique.}.\\
 Afin d’imager correctement le produit de contraste, les séquences adaptées imposent une synchronisation précise par rapport à l’injection du bolus pour que l’acquisition coïncide avec le passage intravasculaire du produit. Le couplage de ce type d’acquisition à des techniques d’accélération des séquences (acquisition parallèle, acquisitions partielles de l’espace K corrélées dans le temps …) permettent d’aboutir à une imagerie 4D des vaisseaux : c’est la CEMRA (« Contrast Enhanced Magnetic Resonnance Angiography »). Dans ce cas, les premiers volumes avant rehaussement servent de masque de soustraction pour extraire l’arbre vasculaire des images suivantes. Si la durée d’acquisition est suffisamment longue, les artères puis les veines seront visibles.\\
 Ces approches souffrent actuellement de leur faible résolution, inhérente aux grandes vitesses d’acquisitions. Cette difficulté peut cependant être surmontée. Les images IRM telles que les angiogrammes contiennent en effet des informations très localisées : les pixels contenant de l’information sont relativement rares dans l’espace 3D. On a des matrices 3D creuses (« sparse »). Au vue des récents développements dans la théorie mathématique des acquisitions compressées (« compressed-sensing »), les images possédant une représentation de ce type peuvent être reconstruites à partir d’un sous-échantillonnage aléatoire de l’espace réciproque (\cite{Lustig2007}). En effet, le passage de cet échantillonnage vers l’espace image se traduit par un bruit aléatoire qui se neutralise, tandis que l’information d’intérêt, regroupée en cluster (artères etc.) ressort clairement. Ce type d’acquisition permet de l’obtention de cartographies vasculaires avec un excellent niveau de détail (Figure~\ref{fig:1_7_contrast_angiography}).
 
@@ -148,8 +148,8 @@ Ces approches souffrent actuellement de leur faible résolution, inhérente aux 
 \label{fig:1_9_saturation_partielle}	
 \end{figure}
 %%%
-L’{\em imagerie par temps de vol} ("Time Of Flight" ou TOF) est une technique d’acquisition sans injection de produit de contraste permettant de mettre en évidence les flux artériels en utilisant les modifications liées au déplacement du volume sanguin, qui ne sera pas soumis à l’ensemble des impulsions radiofréquences contrairement au tissu stationnaire. Ce phénomène, appelé phénomène d’{\em entrée de coupe}, s'obtient en jouant sur la dynamique de la saturation magnétique, {\em via} les valeurs relatives du temps de répétition $TR$ de l'impulsion radiofréquence et du temps de relaxation $T1$. Lorsque les impulsions radiofréquences (90°) sont suffisamment éloignées ($TR > 5  T1$) la magnétisation longitudinale a le temps de retrouver son état initial (voir Figure~\ref{fig:1_9_saturation_partielle}) avant la prochaine impulsion. En revanche, lorsque les impulsions sont très rapprochées, cette magnétisation ne peut revenir à son état initial, et une plus faible aimantation longitudinale sera disponible pour les impulsions suivantes. Après quelques impulsions RF, un nouvel état d’équilibre moyen apparait (Figure~\ref{fig:1_9_saturation_partielle}) à un niveau inférieur au niveau original, c’est la saturation magnétique (voir pour une explication très claire le site ~\cite{timeflighteffects}).\\
-Dans une imagerie par temps de vol, les tissus stationnaires sont saturés grâce à des TR très courts, ce qui conduit à une diminution de leur signal, et induit le phénomène d’entrée de coupe. En effet, comme le sang artériel circulant entrant dans la zone explorée n’a pas été saturé, son aimantation longitudinale est maximale. Le signal du sang entrant apparait alors comme plus important que celui du tissu stationnaire (Figure~\ref{fig:1_8_IRM_temps_de_vol}). La visualisation des structures artérielles peut être ensuite améliorée lors du traitement de l'image par projection des intensités maximales selon différents angles afin d’aboutir à une « pseudo » vue 3D.\\
+L’{\em imagerie par temps de vol} ("Time Of Flight" ou TOF) est une technique d’acquisition sans injection de produit de contraste permettant de mettre en évidence les flux artériels en utilisant les modifications liées au déplacement du volume sanguin, qui ne sera pas soumis à l’ensemble des impulsions radiofréquences contrairement au tissu stationnaire. Ce phénomène, appelé phénomène d’{\em entrée de coupe}, s'obtient en jouant sur la dynamique de la saturation magnétique, {\em via} les valeurs relatives du temps de répétition $T_R$ de l'impulsion radiofréquence et du temps de relaxation $T_1$. Lorsque les impulsions radiofréquences (90°) sont suffisamment éloignées ($T_R > 5  T_1$) la magnétisation longitudinale a le temps de retrouver son état initial (voir Figure~\ref{fig:1_9_saturation_partielle}) avant la prochaine impulsion. En revanche, lorsque les impulsions sont très rapprochées, cette magnétisation ne peut revenir à son état initial, et une plus faible aimantation longitudinale sera disponible pour les impulsions suivantes. Après quelques impulsions RF, un nouvel état d’équilibre moyen apparait (Figure~\ref{fig:1_9_saturation_partielle}) à un niveau inférieur au niveau original, c’est la saturation magnétique (voir pour une explication très claire le site ~\cite{timeflighteffects}).\\
+Dans une imagerie par temps de vol, les tissus stationnaires sont saturés grâce à des $T_R$ très courts, ce qui conduit à une diminution de leur signal, et induit le phénomène d’entrée de coupe. En effet, comme le sang artériel circulant entrant dans la zone explorée n’a pas été saturé, son aimantation longitudinale est maximale. Le signal du sang entrant apparait alors comme plus important que celui du tissu stationnaire (Figure~\ref{fig:1_8_IRM_temps_de_vol}). La visualisation des structures artérielles peut être ensuite améliorée lors du traitement de l'image par projection des intensités maximales selon différents angles afin d’aboutir à une « pseudo » vue 3D.\\
 Du fait du principe de l’imagerie TOF, la qualité de l’image récupérée va dépendre des caractéristiques des vaisseaux et des flux sanguins. Ainsi des flux lents (inférieurs à 10 cm/sec) (\cite{Offerman2011})  ou orientés parallèlement au plan de coupe entrainent une perte de signal de même que les flux turbulents (sténoses) (\cite{Bradley1984}). C’est la raison pour laquelle cette modalité est peu adaptée au système veineux.\\
 %%%
 \begin{figure}[!t]
