--- a/Chapitre4.tex
+++ b/Chapitre4.tex
@@ -27,7 +27,7 @@ aussi. Mais le cerveau présente un mécanisme dit d’autorégulation capable d
 ajustant le diamètre des artérioles en réponse aux variations de pression et assurant un apport
 constant et suffisant de ressources.\\			
 Une première autorégulation, dite métabolique, intervient en réponse au changement de
-pression artérielle en CO2 (paCO2). Elle va réguler le débit sanguin cérébral en fonction des besoins du
+pression artérielle en $CO_2$ ($paCO_2$). Elle va réguler le débit sanguin cérébral en fonction des besoins du
 tissu. L’autorégulation métabolique produit une vasodilatation pour augmenter le débit lorsque le pH
 chute durant les évènements hypoxiques. Inversement, en phase d’hyperventilation, le pH augmente,
 induisant une vasoconstriction et ainsi une diminution du volume sanguin cérébral (\cite{Hajjar2010}). La diminution
@@ -36,7 +36,7 @@ courant est transmis aux cellules musculaires lisses par des jonctions myoendoth
 les canaux calcium, baisse le calcium intracellulaire et ainsi relaxe les SMC.\\	
 Une seconde autorégulation intervient en réponse aux variations de pression. En effet le débit
 sanguin cérébral est maintenu entre 50 et 60 mL/100g/min pour des pressions perfusionnelles cérébrales (CPP) de 60 à 160 mmHg. Cela traduit la présence d’un mécanisme d’autorégulation du
-débit (Figure 29). 
+débit (Figure~\ref{fig:3_1_autoregulation}). 
 %%%
 \begin{figure}[!t]
 \centering
