--- a/Chapitre4.tex
+++ b/Chapitre4.tex
@@ -281,7 +281,7 @@ du sang artériel eux même, marqués magnétiquement. Il s’agit d’une techn
 l’acquisition de deux volumes, l’un avec marquage des protons artériels et l’autre sans marquage
 (contrôle). Le marquage est réalisé au niveau du cou à l’aide d’une impulsion radiofréquence à 180°,
 dite impulsion d’inversion. Par la suite le sang évolue vers les niveaux supérieurs via les artères,
-artérioles puis capillaires, pour arriver dans la zone à imager. Après un temps TI (temps d’inversion),
+artérioles puis capillaires, pour arriver dans la zone à imager. Après un temps $T_I$ (temps d’inversion),
 l’acquisition des images est réalisée via un technique d’imagerie rapide (Figure~\ref{fig:3_7_ASL}). 
 %%%
 \begin{figure}[!t]
